[gd_scene load_steps=10 format=3 uid="uid://bmfik6nt4y0j0"]

[ext_resource type="Script" uid="uid://ddpwtj3v0qma3" path="res://game_piece.gd" id="1_ctm52"]
[ext_resource type="Texture2D" uid="uid://cu1y5p7k0pads" path="res://assets/graphics/icons/deadbeef/hex_chip.png" id="2_g4mr7"]
[ext_resource type="Texture2D" uid="uid://0v6k85gfryip" path="res://assets/graphics/icons/textures/atom.png" id="3_dsx61"]
[ext_resource type="Texture2D" uid="uid://bh8gr2oebe1w7" path="res://assets/graphics/icons/deadbeef/hex_chip_u.png" id="4_5erml"]
[ext_resource type="Texture2D" uid="uid://dsbbxqbeqt3kc" path="res://assets/graphics/icons/deadbeef/hex_chip_ur.png" id="5_5acrq"]
[ext_resource type="Texture2D" uid="uid://cyecdr5m82x8h" path="res://assets/graphics/icons/deadbeef/hex_chip_dr.png" id="6_mnfa6"]
[ext_resource type="Texture2D" uid="uid://bv4lj30ij5kpr" path="res://assets/graphics/icons/deadbeef/hex_chip_d.png" id="7_qmvho"]
[ext_resource type="Texture2D" uid="uid://dbkdf3xsltg2" path="res://assets/graphics/icons/deadbeef/hex_chip_dl.png" id="8_ijm18"]
[ext_resource type="Texture2D" uid="uid://djj7c6fm25lqt" path="res://assets/graphics/icons/deadbeef/hex_chip_ul.png" id="9_cr2ma"]

[node name="GamePiece" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 200.0
script = ExtResource("1_ctm52")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_g4mr7")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -70.0
offset_right = 37.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_dsx61")
expand_mode = 1

[node name="Face" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="KernelLabel" type="Label" parent="Face"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -95.0
offset_right = 30.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.19434929, 0.19434926, 0.19434926, 1)
theme_override_font_sizes/font_size = 60
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProtocolLabel" type="Label" parent="Face"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -14.0
offset_right = 47.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.19434929, 0.19434926, 0.19434926, 1)
theme_override_font_sizes/font_size = 24
text = "Protocol"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RarityLabel" type="Label" parent="Face"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.5
offset_top = 22.0
offset_right = 24.5
offset_bottom = 68.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.19434929, 0.19434926, 0.19434926, 1)
theme_override_font_sizes/font_size = 34
text = "UC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wall_U" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_5erml")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Wall_UR" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_5acrq")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Wall_DR" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_mnfa6")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Wall_D" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_qmvho")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Wall_DL" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_ijm18")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Wall_UL" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_cr2ma")
expand_mode = 1
metadata/_edit_lock_ = true
